--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
     font-family: 'hind siliguri';
+    margin: 0;
 }
 
 h1{
@@ -18,4 +19,24 @@ h1{
 }
 .half-width img {
     width : 100%;
+}
+
+#first-section {
+    background-image: url(images/top-banner.png);
+    height: 500px;
+    background-repeat: no-repeat;
+    
+}
+
+.half-width a {
+    text-decoration : none;
+    background : linear-gradient(45deg, lightsalmon, tomato);
+    border-radius: 10px;
+    padding: 10px 20px;
+    color : white;
+    font-weight: bold;
+}
+
+#dream-area {
+    padding-top: 100px;
 }
